--- a/web.config
+++ b/web.config
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+    <webSocket enabled="false" />
     <handlers>
       <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
-        <rule name="Node.js" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url=".*" />
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-          </conditions>
+        <rule name="NextJS Routes" stopProcessing="true">
+          <match url="/*" />
           <action type="Rewrite" url="server.js" />
         </rule>
       </rules>
